# Endec

./: Dockerfile  Makefile  entrypoint.sh  pyproject.toml  story.txt
app/: api.py  db.py  endec.py  healthcheck.py  main.py
app/configs/: app.py  mongodb.py
app/endpoints/: endec_decoder.py  endec_encoder.py
app/models/: endec_decoder.py  endec_encoder.py
app/services/: endec_decoder.py  endec_encoder.py
mongodb/: docker-compose.yml
