[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.22"
fastapi = "^0.104.1"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
openai = "^0.28.1"
greenlet = "^3.0.1"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"
cryptography = "^42.0.2"
odmantic = "1.0.0"
passlib = "^1.7.4"
jwt = "^1.3.1"
pyjwt = "^2.8.0"
pika = "^1.3.2"
beanie = "^1.26.0"
transformers = "^4.40.2"
aiofiles = "^23.2.1"
torch = "^2.3.0"
pillow = "^10.3.0"
einops = "^0.8.0"
torchvision = "^0.18.0"
xformers = "^0.0.26.post1"
timm = "^0.9.16"
accelerate = "^0.30.0"
swissarmytransformer = "^0.4.11"
python-multipart = "^0.0.9"


[tool.poetry.group.lint.dependencies]
pylint = "^3.0.2"
isort = "^5.12.0"
black = "^23.10.1"
autoflake = "^2.2.1"

[tool.black]
line-length=120

[tool.isort]
profile = "black"

[tool.autoflake]
remove-all-unused-imports = true
ignore-init-module-imports = true
quiet = true
in-place = true
recursive = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
